# api-fast-ecommerce

./: Dockerfile  README.md  comand.sh  docker-compose.yml  pyproject.toml
app/: main.py
app/db/: connection.py  models.py
app/migrations/: env.py
app/migrations/versions/: 7fed8166fbd6_add_categories_table.py
app/routers/: category_routes.py  deps.py
app/schemes/: base.py  category.py
app/test/schems/: test_category_schema.py
app/test/use_cases/: test_category_use_case.py
app/tests/routes/: test_category_route.py
app/use_cases/: category.py
